--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,11 @@
   position: sticky;
 }
 
+.navbar h1 {
+	margin-left: 50px;
+	letter-spacing: 5px;
+}
+
 .navbar button {
 	float: right;
 	background-color: transparent;
@@ -47,6 +52,10 @@
 	text-decoration: none;
 	margin: 10px;
 	padding: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	letter-spacing: 5px;
+	transform: skewY(1deg);
 }
 
 body {
@@ -61,7 +70,7 @@ body {
 .bio {
 	width: 50%;
 	padding: 40pt;
-	margin-top: 50px;
+	margin: 50px;
 	text-align: center;
 	font-size: 16pt;
 	letter-spacing: 0.5pt;
@@ -98,4 +107,33 @@ body {
 .navbox img:hover {
 	transition: transform 0.1s ease-in;
 	transform: scale(1.1, 1.1);
+}
+.toolkit {
+	padding: 20px;
+	margin: 50px;
+	margin-top: 100px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	background: rgba(0, 0, 0, 0.45);
+	width: 70%;
+	border-radius: 50px;
+	color: white;
+}
+
+.resume{
+	padding: 50px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.resume button {
+	background: transparent;
+	border: solid 3px white;
+	border-radius: 30px;
+	width: 20%;
+	font-size: 20px;
+	padding: 20px;
+	color: white;
 }
