--- a/styles/style.css
+++ b/styles/style.css
@@ -129,22 +129,27 @@ body {
 	font-size: 18px;
 }
 
-.resume{
-	padding: 50px;
+.resumecontainer {
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 100px;
+	margin-bottom: 100px;
 }
 
-.resume button {
+.resume {
+	padding: 20px;
+
 	background: transparent;
 	border: solid 3px white;
 	border-radius: 30px;
 	width: 20%;
 	font-size: 20px;
-	padding: 20px;
 	color: white;
+}
+
+.resume:hover {
+	text-decoration: none;
 }
 
 .parenttools {
@@ -164,6 +169,7 @@ body {
 	font-size: 24px;
 	font-weight: lighter;
 }
+
 #category {
 	padding: 100px;
 	color: white;
