--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,18 @@
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
-
+ .parent {
+	 margin-top: 150px;
+	 color: white;
+	 text-align: center;
+	 margin-left: auto;
+	 margin-right: auto;
+	 background-color: rgba(0, 0, 0, 0.5);
+	 width: 50%;
+	 border-radius: 50px;
+	 border: 3px solid white;
+	 padding: 20px;
+ }
 .navbar {
 	background-color: rgba(0, 0, 0, 0.4);
 	color: white;
@@ -38,6 +49,7 @@
   position: sticky;
 	top: 0; /* required */
 	box-shadow: 0px 7px 15px -1px rgba(0, 0, 0, 0.2);
+	z-index:1
 }
 .navbar button:hover{
 	transform: scale(1.1) skewy(-1deg);
@@ -147,11 +159,11 @@ body {
 }
 
 .resume {
-	padding: 20px;
+	padding: 15px;
 	background: transparent;
 	border: solid 3px white;
 	border-radius: 30px;
-	width: 20%;
+	width: 15%;
 	font-size: 20px;
 	color: white;
 	transition: all 0.1s ease-in;
@@ -171,30 +183,56 @@ body {
 }
 
 .categories {
-	column-count: 3;
-	column-gap: 3%;
+/*	column-count: 3;
+	column-gap: 3%; */
 	width: 60%;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 15px;
+	margin-top: 5%;
 	color: white;
 	font-size: 24px;
 	font-weight: lighter;
-	overflow: hidden;
+	overflow:visible
 }
 
 #category {
-	padding: 100px;
+	padding: 0px;
 	color: white;
 	background: white;
 	border-radius: 50px;
 	border: none;
 	width: 100%;
+	height: 200px;
 	background-image: url(../images/PlantAR_icon.png);
 	object-fit: fill;
 	box-shadow:2px 8px 8px rgba(0, 0, 0, 0.30);
+	margin-bottom: 5%;
+}
 
+.overlay {
+	transition: all .4s ease;
+	font-size: 36px;
+	background-color: rgba(0,0,0,0.2);
+	width: 100%;
+	height: 100%;
+	border-radius: 50px;
+	padding: 5%;
+	letter-spacing: 5px;
+
+}
+
+#category:hover .overlay{
+	background-color: rgba(0,0,0,0.5);
+	font-size: 38px;
+	border: solid 3px white;
+}
+
+.one{
+transform: rotate(1deg);
+}
+.two{
+transform: rotate(-1deg);
 }
 /*
 .graphic:hover {
