--- a/styles/style.css
+++ b/styles/style.css
@@ -203,11 +203,11 @@ body {
 	border-radius: 50px;
 	border: none;
 	width: 100%;
-	height: 200px;
+	height: 10%;
 	background-image: url(../images/PlantAR_icon.png);
 	object-fit: fill;
 	box-shadow:2px 8px 8px rgba(0, 0, 0, 0.30);
-	margin-bottom: 5%;
+	margin-bottom: 8%;
 }
 
 .overlay {
